initialSetup/main/default/objects/DrugSiteEligibilityRunLog__c/DrugSiteEligibilityRunLog__c.object-meta.xml
<CustomObject>
    <description>it will capture the logs of drug site eligibility run</description>
    <label>Drug Site Eligibility Run Log</label>
    <nameField>
        <label>DrugSiteEligibilityRunLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drug Site Eligibility Run Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>