initialSetup/main/default/objects/DrugSiteEligibilityRunLog__c/fields/Enrolled_Site__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Site__c</fullName>
    <label>Enrolled Site</label>
    <referenceTo>Enrolled_Site__c</referenceTo>
    <relationshipLabel>Drug Site Eligibility Run Logs</relationshipLabel>
    <relationshipName>Drug_Site_Eligibility_Run_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>