initialSetup/main/default/objects/DrugSiteEligibilityRunLog__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Eligibility run log details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>